--- a/booking.html
+++ b/booking.html
@@ -262,6 +262,25 @@
             color: #000;
             font-weight: 300;
         }
+        
+        @media screen and (max-width:600px) {
+            .payment {
+                width: 100vw;
+                height: 120vh;
+            }
+            .center {
+                width: 10vw;
+                margin-top: 120px;
+            }
+            #open-popup-btn {
+                width: 100px;
+                font-size: 10px;
+            }
+            .popup {
+                width: 140px;
+                height: 300px;
+            }
+        }
     </style>
 </head>
 
