--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                     </ul>
                 </li>
 
-                <li class="nav__item nav__item--extra">
+                <li class="nav_item nav_item--extra">
                     <h2 class="nav__title">Main Attractions</h2>
 
-                    <ul class="nav__ul nav__ul--extra">
+                    <ul class="nav_ul nav_ul--extra">
                         <li>
                             <a href="events.html" target="_blank">Roller Coaster</a>
                         </li>
